# src/routes/chat.route.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { messages, chats, roomDetails, createRoom, joinRoom, sendMessage } from '../controllers/chat.controller';
+import { messages, chats, roomDetails, createRoom, joinRoom, sendMessage, deleteMessages } from '../controllers/chat.controller';
 import { authenticateJWT } from '@/middlewares/userInfo.middlewares';
 import joinRoomLimiter from '@/utils/ratelimit.utills';
 import { uploads } from '@/middlewares/messageFileUpload';
@@ -13,10 +13,13 @@ chatRouter.get('/messages/:chatId', messages); // get all messages for a specifi
 chatRouter.post('/create-room', authenticateJWT, createRoom);
 chatRouter.post('/join-room/:chatId', authenticateJWT, joinRoomLimiter, joinRoom);
 chatRouter.post('/send-message/:chatId', authenticateJWT, sendMessage);
+chatRouter.post('/deleteMessages/:chatId/:messageId',authenticateJWT,deleteMessages)
+chatRouter.post('/deleteMessages/:messageId',deleteMessages)
+
 // chatRouter.post(
 //   '/send-message/:chatId/:receiverId?', // receiver id can be null
 //   uploads.array('files', 5),
 //   validateFileUpload,
-//   sendMessage,
+//   sendFileMessage,
 // );
 export default chatRouter;
